[gd_scene load_steps=4 format=3 uid="uid://dx7yufxdxnh7m"]

[ext_resource type="Script" path="res://scripts/hud/debug_and_cheats_menu.gd" id="1_6s3ig"]
[ext_resource type="SystemFont" uid="uid://dth5n6d8288l3" path="res://assets/In_Game_Hud.tres" id="1_m5r4p"]
[ext_resource type="PackedScene" uid="uid://dhv0wwe5g6up3" path="res://scenes/sounds/ClickSound.tscn" id="3_2hi1i"]

[node name="DebugAndCheatsMenu" type="Node2D"]
process_mode = 1
script = ExtResource("1_6s3ig")

[node name="Show_Hide_Spawners" type="Button" parent="."]
offset_left = 2.0
offset_right = 162.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Show Spawner Menu"

[node name="Show_Hide_Cheats" type="Button" parent="."]
offset_left = 2.0
offset_top = 33.0
offset_right = 149.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Show Cheats Menu"

[node name="SpawnerMenu" type="Node2D" parent="."]

[node name="SpawnRobot" type="Button" parent="SpawnerMenu"]
offset_left = -107.0
offset_right = -4.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Robot"
metadata/_edit_use_anchors_ = true

[node name="SpawnRobotBoss" type="Button" parent="SpawnerMenu"]
offset_left = -145.0
offset_top = 33.0
offset_right = -4.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Robot Boss"
metadata/_edit_use_anchors_ = true

[node name="SpawnAlien" type="Button" parent="SpawnerMenu"]
offset_left = -107.0
offset_top = 66.0
offset_right = -4.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Alien"
metadata/_edit_use_anchors_ = true

[node name="SpawnAlienRing" type="Button" parent="SpawnerMenu"]
offset_left = -166.0
offset_top = 99.0
offset_right = -4.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Ring of Aliens"
metadata/_edit_use_anchors_ = true

[node name="SpawnBlueDrone" type="Button" parent="SpawnerMenu"]
offset_left = -146.0
offset_top = 132.0
offset_right = -4.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Blue Drone"
metadata/_edit_use_anchors_ = true

[node name="SpawnRedDroneGroup" type="Button" parent="SpawnerMenu"]
offset_left = -192.0
offset_top = 166.0
offset_right = -3.0
offset_bottom = 194.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Red Drone Group
"
metadata/_edit_use_anchors_ = true

[node name="SpawnTurret" type="Button" parent="SpawnerMenu"]
offset_left = -108.0
offset_top = 200.0
offset_right = -3.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Turret"
metadata/_edit_use_anchors_ = true

[node name="SpawnDroneBoss" type="Button" parent="SpawnerMenu"]
offset_left = -145.0
offset_top = 235.0
offset_right = -2.0
offset_bottom = 263.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Drone Boss"
metadata/_edit_use_anchors_ = true

[node name="SpawnFinalBoss" type="Button" parent="SpawnerMenu"]
offset_left = -145.0
offset_top = 270.0
offset_right = -2.0
offset_bottom = 298.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Spawn Final Boss"
metadata/_edit_use_anchors_ = true

[node name="CheatsMenu" type="Node2D" parent="."]

[node name="Invincibility" type="Button" parent="CheatsMenu"]
offset_left = -100.0
offset_right = -3.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("1_m5r4p")
text = "Invincibility"

[node name="LevelUp" type="Button" parent="CheatsMenu"]
offset_left = -78.0
offset_top = 40.0
offset_right = -3.0
offset_bottom = 71.0
text = "Level Up
"

[node name="GiveCoins" type="Button" parent="CheatsMenu"]
offset_left = -110.0
offset_top = 80.0
offset_right = -1.0
offset_bottom = 111.0
text = "Give 30 coins"

[node name="ClickSound" parent="." instance=ExtResource("3_2hi1i")]

[connection signal="pressed" from="Show_Hide_Spawners" to="." method="_on_show_hide_debug_pressed"]
[connection signal="pressed" from="Show_Hide_Cheats" to="." method="_on_show_hide_cheats_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnRobot" to="." method="_on_spawn_robot_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnRobotBoss" to="." method="_on_spawn_robot_boss_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnAlien" to="." method="_on_spawn_alien_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnAlienRing" to="." method="_on_spawn_alien_ring_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnBlueDrone" to="." method="_on_spawn_blue_drone_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnRedDroneGroup" to="." method="_on_spawn_red_drone_group_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnTurret" to="." method="_on_spawn_turret_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnDroneBoss" to="." method="_on_spawn_drone_boss_pressed"]
[connection signal="pressed" from="SpawnerMenu/SpawnFinalBoss" to="." method="_on_spawn_final_boss_pressed"]
[connection signal="pressed" from="CheatsMenu/Invincibility" to="." method="_on_invincibility_pressed"]
[connection signal="pressed" from="CheatsMenu/LevelUp" to="." method="_on_level_up_pressed"]
[connection signal="pressed" from="CheatsMenu/GiveCoins" to="." method="_on_give_coins_pressed"]
